test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_pass_0/src/main.nr

        fn main() {
            if false { main(); }
        }
        